--- a/CSS/style_index.css
+++ b/CSS/style_index.css
@@ -4,7 +4,8 @@
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, sans-serif;
 }
 
-body {margin: 0;
+body {
+  margin: 0;
 }
 
 /********
@@ -12,37 +13,29 @@ Splash Page
 ********/
 
 header {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-flow: column;
-
   background-color: blue;
   height: 100vh;
 }
 
 nav {
-  margin: 50px;
-  width: 300px;
-  
   display: flex;
-  justify-content: space-around;
-  position: absolute;
+  justify-content: center;
+  align-items: center;
   top: 0;
 }
 
 a {
+  padding: 20px;
   text-decoration: none;
   color: white;
 }
 
 h1 {
   display: flex;
-  flex-flow: column;
   justify-content: center;
   align-items: center;
-
-  font-size: 200px;
+  flex-wrap: wrap;
+  font-size: 150px;
 
   color: yellow;
 }
@@ -56,10 +49,6 @@ Intro Page
 
   height: 100vh;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
   font-size: 20px;
 
   background-color: rgb(240, 240, 50);
@@ -67,18 +56,26 @@ Intro Page
 }
 
 .intro_text {
-  width: 30em;
+  margin: 0;
+  padding: 20px;
+
+  height: 100vh;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  font-size: 50px;
 
   text-align: center;
+
+  background-color: rgb(240, 240, 50);
+  color: white;
 }
 
 /********
 Work Page 
 ********/
-
-.project-page {
-  background-color: rgba(238, 232, 232, 0.6);  
-}
 
 .work_title {
   margin: 0;
@@ -95,10 +92,10 @@ Work Page
   background-color: rgb(240, 240, 50);
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffe032+0,ffe032+49,fccc2f+49,fccc2f+100 */
   background: #ffe032; /* Old browsers */
-  background: -moz-linear-gradient(45deg, #ffe032 0%, #ffe032 49%, #fccc2f 49%, #fccc2f 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(45deg, #ffe032 0%,#ffe032 49%,#fccc2f 49%,#fccc2f 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(45deg, #ffe032 0%,#ffe032 49%,#fccc2f 49%,#fccc2f 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffe032', endColorstr='#fccc2f',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+  background: -moz-linear-gradient(45deg, #ffe032 0%, #ffe032 49%, #fccc2f 49%, #fccc2f 100%); /* FF3.6-15*/
+  background: -webkit-linear-gradient(45deg, #ffe032 0%,#ffe032 49%,#fccc2f 49%,#fccc2f 100%); /*Chrome10-25,Safari5.1-6*/
+  background: linear-gradient(45deg, #ffe032 0%,#ffe032 49%,#fccc2f 49%,#fccc2f 100%);/* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+*/
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffe032', endColorstr='#fccc2f',GradientType=1 ); /*IE6-9 fallback on horizontal gradient*/
   color: white;
 }
 
@@ -110,8 +107,9 @@ Project General
   display: flex;
   justify-content: center;
   align-items: baseline;
+  flex-wrap: wrap;
   
-  height: 45vh;
+  margin-bottom: 15em;
 }
 
 .info {
@@ -124,9 +122,7 @@ Project General
 
 .info_spec {
   align-items: flex-start;
-  margin-left: 10em;
-
-  min-width: 600px;
+  max-width: 500px;
 }
 
 .info_title {
@@ -155,7 +151,6 @@ Project General
   color: black;
   font-size: 13px;
   font-weight: 500;
-
 
   border: 1.3px solid black;
   border-radius: 20px;
@@ -204,18 +199,13 @@ Project General
 Footer
 **********/
 
-footer {
-  /* position: relative; */
-
-  margin: 50px;
-}
 
 .footer_part {
   display: flex;
   flex-flow: row;
   justify-content: center;
 
-  /* flex-wrap: wrap; */
+  flex-wrap: wrap;
 }
 
 .footer_title {
@@ -228,12 +218,15 @@ footer {
   margin: 30px;
   display: flex;
   flex-flow: column;
+}
 
+.footer_text {
+  max-width: 500px;
 }
 
 .footer_img {
-  justify-self: flex-end;
-
+  margin-left: 5em;
+  
   top: 0em;
   border-radius: 20px;
   right: 1em;
@@ -249,6 +242,11 @@ footer {
   margin-left: 20px;
 }
 
+.contact_list {
+  display: flex;
+  justify-content: flex;
+}
+
 .link_footer {
   color: black;
 }
@@ -256,3 +254,115 @@ footer {
 .contact_img {
   width: 20px;
 }
+
+@media (max-width: 1120px)  {
+
+  .project_img {
+    transform: scale(.7);
+    
+  }
+
+  h1 {
+    transform: scale(.8)
+  }
+}
+
+@media (max-width: 750px)  {
+
+  .project_img {
+    transform: scale(.6);
+    
+  }
+
+  .img_videomaking {
+    transform: scale(.4)
+  }
+
+  h1 {
+    transform: scale(.7)
+  }
+
+  .info {
+    margin:10px;
+    padding: 1px;
+  }
+
+  .info_title {
+    margin: auto;
+  }
+
+  .info_spec{
+    margin-top: 15px;
+  }
+
+  .project {
+    margin-top: 3em;
+    margin-bottom: 10em;
+
+    justify-content: flex-start;
+
+  }
+
+} 
+
+@media (max-width: 400px)  {
+  
+  .intro_text {
+    padding: 25px;
+
+    font-size: 35px;
+  }
+
+  h1 {
+    transform: scale(.5)
+  }
+
+  .project_img {
+    transform: scale(.4);
+    
+  }
+
+  .img_the_fork {
+    transform: scale(.7)
+  }
+
+  .img_svolta {
+    transform: scale(.5)
+  }
+
+  .img_videomaking {
+    transform: scale(.3)
+  }
+
+  .work_title {
+    font-size: 100px;
+  }
+
+  .project {
+    margin: 10px;
+    margin-bottom: 2em;
+
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+  }
+
+  .info {
+    margin: 0;
+    padding: 15px;
+  }
+
+  .info_title {
+    margin: 0;
+  }
+
+  .link_to_product {
+    margin: 7px;
+  }
+
+  .contact_list {
+    justify-content: center;
+    padding: 0;
+  }
+
+} 
