--- a/CSS/style_index.css
+++ b/CSS/style_index.css
@@ -1,10 +1,11 @@
 * {
   box-sizing: border-box;
 
-  font-family: gotham;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, sans-serif;
 }
 
-body {margin: 0;
+body {
+  margin: 0;
 }
 
 /********
@@ -12,37 +13,29 @@ Splash Page
 ********/
 
 header {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-flow: column;
-
   background-color: blue;
   height: 100vh;
 }
 
 nav {
-  margin: 50px;
-  width: 300px;
-  
   display: flex;
-  justify-content: space-around;
-  position: absolute;
+  justify-content: center;
+  align-items: center;
   top: 0;
 }
 
 a {
+  padding: 20px;
   text-decoration: none;
   color: white;
 }
 
 h1 {
   display: flex;
-  flex-flow: column;
   justify-content: center;
   align-items: center;
-
-  font-size: 200px;
+  flex-wrap: wrap;
+  font-size: 150px;
 
   color: yellow;
 }
@@ -56,29 +49,33 @@ Intro Page
 
   height: 100vh;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
   font-size: 20px;
 
-  background-color: rgb(230, 230, 22);
+  background-color: rgb(240, 240, 50);
   color: white;
 }
 
 .intro_text {
-  width: 30em;
+  margin: 0;
+  padding: 20px;
+
+  height: 100vh;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  font-size: 50px;
 
   text-align: center;
+
+  background-color: rgb(240, 240, 50);
+  color: white;
 }
 
 /********
 Work Page 
 ********/
-
-.project-page {
-  background-color: rgba(238, 232, 232, 0.6);  
-}
 
 .work_title {
   margin: 0;
@@ -92,7 +89,13 @@ Work Page
   justify-content: center;
   align-items: center;
 
-  background-color: rgb(230, 230, 22);
+  background-color: rgb(240, 240, 50);
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffe032+0,ffe032+49,fccc2f+49,fccc2f+100 */
+  background: #ffe032; /* Old browsers */
+  background: -moz-linear-gradient(45deg, #ffe032 0%, #ffe032 49%, #fccc2f 49%, #fccc2f 100%); /* FF3.6-15*/
+  background: -webkit-linear-gradient(45deg, #ffe032 0%,#ffe032 49%,#fccc2f 49%,#fccc2f 100%); /*Chrome10-25,Safari5.1-6*/
+  background: linear-gradient(45deg, #ffe032 0%,#ffe032 49%,#fccc2f 49%,#fccc2f 100%);/* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+*/
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffe032', endColorstr='#fccc2f',GradientType=1 ); /*IE6-9 fallback on horizontal gradient*/
   color: white;
 }
 
@@ -101,45 +104,89 @@ Project General
 **************/
 
 .project {
-  position: relative;
   display: flex;
-  flex-flow: row;
   justify-content: center;
+  align-items: baseline;
+  flex-wrap: wrap;
   
-  height: 45vh;
+  margin-bottom: 15em;
 }
 
 .info {
-  margin: 3em;
-  margin-top: 4em;
+  margin-top: 5em;
+  margin-left: 3em;
+
+  display: flex;
+  flex-flow: column;
 }
 
 .info_spec {
-  margin-top: 2em;
-
-  min-width: 600px;
+  align-items: flex-start;
+  max-width: 500px;
 }
 
 .info_title {
+  margin: 1em;
   font-size: 2em;
 }
 
 .info_spec_title {
+  margin: 0;
+  
   font-size: 3em;
 }
 
-.link_page {
-  border: 2px solid black;
-  padding: .5em 2em;
+.link_to_product { 
+  margin: 0;
+  padding: 0.5em 2em;
 
+  display: block;
+
+  position: relative;
+
+  overflow: hidden;
+
+  text-transform: uppercase;
+  text-decoration: none;
   color: black;
+  font-size: 13px;
+  font-weight: 500;
+
+  border: 1.3px solid black;
+  border-radius: 20px;
+}
+
+.link_to_product:after {
+  content: "";
+
+  width: 100%;
+  height: 100%;
+
+  position: absolute;
+  z-index: -1;
+  top: 100%;
+  left: 0;
+
+  background-color: #fe9689;
+
+  transition: all .2s ease-out;
+}
+
+.link_to_product:hover:after {
+  top:0;
 }
 
 .info_img {
   display: flex;
-
+  justify-content: center;
+  background-color: #fe9689
 }
 
+.project_img {
+  margin: 70px 0px;
+
+  height: 500px;
+}
 
 .link_page:hover {
   border: 0;
@@ -152,25 +199,174 @@ Project General
 Footer
 **********/
 
-footer {
-  position: relative;
+
+.footer_part {
+  display: flex;
+  flex-flow: row;
+  justify-content: center;
+
+  flex-wrap: wrap;
+}
+
+.footer_title {
+  font-size: 50px;
+
+  margin: 0;
 }
 
 .footer_description {
   margin: 30px;
   display: flex;
   flex-flow: column;
+}
 
-  width: 500px;
+.footer_text {
+  max-width: 500px;
 }
 
 .footer_img {
-  position: absolute;
+  margin-left: 5em;
   
   top: 0em;
   border-radius: 20px;
   right: 1em;
  
   width: 500px;
+  height: 300px;
 }
 
+.contact {
+  list-style: none;
+  display: inline-block;
+
+  margin-left: 20px;
+}
+
+.contact_list {
+  display: flex;
+  justify-content: flex;
+}
+
+.link_footer {
+  color: black;
+}
+
+.contact_img {
+  width: 20px;
+}
+
+@media (max-width: 1120px)  {
+
+  .project_img {
+    transform: scale(.7);
+    
+  }
+
+  h1 {
+    transform: scale(.8)
+  }
+}
+
+@media (max-width: 750px)  {
+
+  .project_img {
+    transform: scale(.6);
+    
+  }
+
+  .img_videomaking {
+    transform: scale(.4)
+  }
+
+  h1 {
+    transform: scale(.7)
+  }
+
+  .info {
+    margin:10px;
+    padding: 1px;
+  }
+
+  .info_title {
+    margin: auto;
+  }
+
+  .info_spec{
+    margin-top: 15px;
+  }
+
+  .project {
+    margin-top: 3em;
+    margin-bottom: 10em;
+
+    justify-content: flex-start;
+
+  }
+
+} 
+
+/*****
+MOBILE
+*****/
+
+@media (max-width: 400px)  {
+  
+  .intro_text {
+    padding: 25px;
+
+    font-size: 35px;
+  }
+
+  h1 {
+    transform: scale(.5)
+  }
+
+  .project_img {
+    transform: scale(.4);
+    
+  }
+
+  .img_the_fork {
+    transform: scale(.7)
+  }
+
+  .img_svolta {
+    transform: scale(.4)
+  }
+
+  .img_videomaking {
+    transform: scale(.3)
+  }
+
+  .work_title {
+    font-size: 100px;
+  }
+
+  .project {
+    margin: 10px;
+    margin-bottom: 2em;
+
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+  }
+
+  .info {
+    margin: 0;
+    padding: 15px;
+  }
+
+  .info_title {
+    margin: 0;
+  }
+
+  .link_to_product {
+    margin: 7px;
+  }
+
+  .contact_list {
+    justify-content: center;
+    padding: 0;
+  }
+
+} 
