--- a/CSS/style_index.css
+++ b/CSS/style_index.css
@@ -30,6 +30,13 @@ a {
   color: white;
 }
 
+.my_name { 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
 h1 {
   display: flex;
   justify-content: center;
