--- a/CSS/style_index.css
+++ b/CSS/style_index.css
@@ -17,11 +17,11 @@ header {
   height: 100vh;
 }
 
-nav {
+.navigation_page {
+  padding: 2em;
+
   display: flex;
   justify-content: center;
-  align-items: center;
-  top: 0;
 }
 
 a {
@@ -34,14 +34,11 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
 }
 
 h1 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
+  width: 5em;
+  text-align: center;
   font-size: 150px;
 
   color: yellow;
@@ -251,7 +248,7 @@ Footer
 
 .contact_list {
   display: flex;
-  justify-content: flex;
+  justify-content: center;
 }
 
 .link_footer {
@@ -307,16 +304,18 @@ Footer
     margin-bottom: 10em;
 
     justify-content: flex-start;
-
   }
 
+  .img_svolta {
+    transform: scale(.4)
+  }
 } 
 
 /*****
 MOBILE
 *****/
 
-@media (max-width: 400px)  {
+@media (max-width: 450px)  {
   
   .intro_text {
     padding: 25px;
