--- a/CSS/style_fendi.css
+++ b/CSS/style_fendi.css
@@ -1,15 +1,93 @@
 * {
   box-sizing: border-box;
 
-  font-family: gotham;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.project_list {
+body {
+  margin: 0;
+}
+
+.project_page_header {     
+  margin: 2em 4em 12em 0;
+
   display: flex;
   flex-flow: column;
   justify-content: center;
-  align-items: center;
+  align-items: flex-end;
 }
 
+.project_page_title {
+  font-size: 50px;
+}
 
+.project_page_p {
+  max-width: 30em;
+}
 
+.project_page_project_header {
+  display: flex;
+  flex-flow: row;
+  justify-content: space-around;
+
+  
+  background-color: #fe9689;
+}
+
+.project_page_project_description {
+  transform: translateY(-12em);
+
+  margin: 0 20px 0;
+}
+
+.project_page_description_img {
+  max-width: 25em;
+
+  transform: translateY(-10em);
+}
+
+.project_page_description_img_svolta {
+  max-width: 30em;
+
+  transform: translateY(-10em);
+}
+
+.project_page_project_list {
+  margin: 10em;
+  border-radius: 40px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column;
+
+  background-color: rgb(236, 236, 236);
+  -webkit-box-shadow: 0px 0px 29px 8px rgba(148,148,148,0.68);
+  -moz-box-shadow: 0px 0px 29px 8px rgba(148,148,148,0.68);
+  box-shadow: 0px 0px 29px 8px rgba(148,148,148,0.68);
+}
+
+.project_page_project_img {
+ padding: 50px;
+  max-width: 35em;
+}
+
+.project_page_footer {
+  margin: 40px;
+  
+  display: flex;
+  justify-content: center;
+}
+
+.back_to_main {
+  text-decoration: none;
+  color: #fe9689;
+}
+
+.back_to_main:hover {
+  background-color: #fe9689;
+  color: white;
+  padding: 10px 15px;
+
+  border-radius: 30px;
+}
