--- a/CSS/style_index.css
+++ b/CSS/style_index.css
@@ -156,7 +156,6 @@ Project General
   font-size: 13px;
   font-weight: 500;
 
-  border: 1.3px solid black;
   border-radius: 20px;
 }
 
@@ -180,6 +179,13 @@ Project General
   top:0;
 }
 
+.link_page:hover {
+  border: 0;
+  background-color: rgb(202, 202, 202);
+  color: white;
+  transition: backgroundcolor 1s ease-in-out;
+}
+
 .info_img {
   display: flex;
   justify-content: center;
@@ -192,12 +198,6 @@ Project General
   height: 500px;
 }
 
-.link_page:hover {
-  border: 0;
-  background-color: rgb(202, 202, 202);
-  color: white;
-  transition: backgroundcolor 1s ease-in-out;
-}
 
 /**********
 Footer
@@ -376,3 +376,13 @@ MOBILE
   }
 
 } 
+
+
+
+/***********
+************
+PROJECT PAGE
+************
+***********/
+
+
