--- a/CSS/style_projects.css
+++ b/CSS/style_projects.css
@@ -69,7 +69,11 @@ body {
 
 .project_page_project_img {
  padding: 50px;
-  max-width: 35em;
+  max-width: 45em;
+}
+
+.project_page_video_img {
+  padding: 25px;
 }
 
 .project_page_footer {
@@ -79,15 +83,86 @@ body {
   justify-content: center;
 }
 
-.back_to_main {
+.back_to_main { 
+  margin: 0;
+  padding: 0.5em 2em;
+
+  display: block;
+
+  position: relative;
+
+  overflow: hidden;
+
+  text-transform: uppercase;
   text-decoration: none;
-  color: #fe9689;
+  color: black;
+  font-size: 13px;
+  font-weight: 500;
+
+  border-radius: 20px;
+}
+
+.back_to_main:after {
+  content: "";
+
+  width: 100%;
+  height: 100%;
+
+  z-index: -1;
+  background-color: #fe9689;
+
+  transition: all .2s ease-out;
+}
+
+.back_to_main:hover:after {
+  top:0;
 }
 
 .back_to_main:hover {
-  background-color: #fe9689;
+  border: 0;
+  background-color: rgb(202, 202, 202);
   color: white;
-  padding: 10px 15px;
+  transition: backgroundcolor 1s ease-in-out;
+}
 
-  border-radius: 30px;
+.go_see_it {
+  margin: 20px;
+  padding: 0.5em 2em;
+
+  display: block;
+
+  position: relative;
+
+  overflow: hidden;
+
+  text-transform: uppercase;
+  text-decoration: none;
+  color: black;
+  font-size: 13px;
+  font-weight: 500;
+
+  border-radius: 20px;
+}
+
+.go_see_it:after {
+  content: "";
+
+  width: 100%;
+  height: 100%;
+
+  z-index: -1;
+  background-color: #fe9689;
+
+  transition: all .2s ease-out;
+}
+
+.go_see_it:hover:after {
+  top:0;
+}
+
+.go_see_it:hover {
+  border: 0;
+  background-color: rgb(202, 202, 202);
+  color: white;
+  transition: backgroundcolor 1s ease-in-out;
 }
