--- a/CSS/style_index.css
+++ b/CSS/style_index.css
@@ -33,7 +33,7 @@ a {
 .my_name { 
   display: flex;
   justify-content: center;
-  align-items: center;
+  
 }
 
 h1 {
@@ -118,7 +118,7 @@ Project General
 
 .info {
   margin-top: 5em;
-  margin-left: 3em;
+  
 
   display: flex;
   flex-flow: column;
@@ -126,7 +126,7 @@ Project General
 
 .info_spec {
   align-items: flex-start;
-  max-width: 500px;
+  max-width: 350px;
 }
 
 .info_title {
@@ -137,7 +137,7 @@ Project General
 .info_spec_title {
   margin: 0;
   
-  font-size: 3em;
+  font-size: 2em;
 }
 
 .link_to_product { 
@@ -255,6 +255,22 @@ Footer
   width: 20px;
 }
 
+footer {
+  margin: 0;
+
+  height: 100px;
+
+  background-color: aliceblue;
+}
+
+.to_top_link {
+ display: flex;
+ justify-content: center;
+ align-items: center; 
+
+ color: black;
+}
+
 @media (max-width: 1120px)  {
 
   .project_img {
@@ -307,6 +323,7 @@ Footer
   }
 } 
 
+
 /*****
 MOBILE
 *****/
@@ -320,12 +337,13 @@ MOBILE
   }
 
   h1 {
-    transform: scale(.5)
+    transform: scale(.5);
+    position: absolute;
+    top: 70px;
   }
 
   .project_img {
     transform: scale(.4);
-    
   }
 
   .img_the_fork {
@@ -356,14 +374,20 @@ MOBILE
   .info {
     margin: 0;
     padding: 15px;
+    width: 100%;
   }
 
   .info_title {
     margin: 0;
+    font-size: 2em;
   }
 
   .link_to_product {
-    margin: 7px;
+    margin-top: 35px;
+    
+    align-self: center;
+
+    font-weight: 600;
   }
 
   .contact_list {
