--- a/CSS/style_projects.css
+++ b/CSS/style_projects.css
@@ -52,24 +52,31 @@ body {
   transform: translateY(-10em);
 }
 
+
+
 .project_page_project_list {
-  margin: 10em;
-  border-radius: 40px;
+ /* margin: 10em;
+  border-radius: 40px;*/
 
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: column;
 
-  background-color: rgb(236, 236, 236);
-  -webkit-box-shadow: 0px 0px 29px 8px rgba(148,148,148,0.68);
-  -moz-box-shadow: 0px 0px 29px 8px rgba(148,148,148,0.68);
-  box-shadow: 0px 0px 29px 8px rgba(148,148,148,0.68);
+ /* background-color: rgb(236, 236, 236);
+  -webkit-box-shadow: 0px 0px 27px -1px rgba(0,0,0,0.23);
+  -moz-box-shadow: 0px 0px 27px -1px rgba(0,0,0,0.23);
+  box-shadow: 0px 0px 27px -1px rgba(0,0,0,0.23);*/
 }
 
+/*.project_page_project_list:nth-child(1,3) {
+  align-self: flex-start;
+}*/
+
 .project_page_project_img {
- padding: 50px;
+  padding: 40px;
   max-width: 45em;
+  /*align-self: flex-end;*/
 }
 
 .project_page_video_img {
@@ -120,7 +127,7 @@ body {
 
 .back_to_main:hover {
   border: 0;
-  background-color: rgb(202, 202, 202);
+  background-color: #fe9689;
   color: white;
   transition: backgroundcolor 1s ease-in-out;
 }
@@ -162,7 +169,7 @@ body {
 
 .go_see_it:hover {
   border: 0;
-  background-color: rgb(202, 202, 202);
+  background-color:#fe9689;
   color: white;
   transition: backgroundcolor 1s ease-in-out;
 }
