--- a/CSS/style_projects.css
+++ b/CSS/style_projects.css
@@ -34,6 +34,16 @@ body {
   background-color: #fe9689;
 }
 
+.project_page_project_header_thefork{
+  background-color: #9fd4e4;
+}
+.project_page_project_header_svolta{
+  background-color: #ffeee7;
+}
+.project_page_project_header_video{
+  background-color: #5617ae;
+}
+
 .project_page_project_description {
   transform: translateY(-12em);
 
@@ -104,7 +114,7 @@ body {
   text-decoration: none;
   color: black;
   font-size: 13px;
-  font-weight: 500;
+  font-weight: 600;
 
   border-radius: 20px;
 }
@@ -132,6 +142,17 @@ body {
   transition: backgroundcolor 1s ease-in-out;
 }
 
+.back_to_main_thefork:hover{
+  background-color: #9fd4e4;
+}
+
+.back_to_main_svolta:hover{
+  background-color: #ffeee7;
+}
+
+.back_to_main_video:hover{
+  background-color: #5617ae;
+}
 .go_see_it {
   margin: 20px;
   padding: 0.5em 2em;
@@ -146,7 +167,7 @@ body {
   text-decoration: none;
   color: black;
   font-size: 13px;
-  font-weight: 500;
+  font-weight: 600;
 
   border-radius: 20px;
 }
@@ -158,7 +179,7 @@ body {
   height: 100%;
 
   z-index: -1;
-  background-color: #fe9689;
+  background-color: #5617ae;
 
   transition: all .2s ease-out;
 }
@@ -169,7 +190,69 @@ body {
 
 .go_see_it:hover {
   border: 0;
-  background-color:#fe9689;
+  background-color:#5617ae;
   color: white;
   transition: backgroundcolor 1s ease-in-out;
+}
+
+
+/*****
+MOBILE
+*****/
+
+@media (max-width: 450px)  {
+  .project_page_header {
+    margin-left: 1em;
+    margin-top: 0;
+  }
+
+  .project_page_title {
+    font-size: 50px;
+    margin: 15px 0 10px;
+  }
+
+  .project_page_project_description {
+    transform: translateY(-17em);
+    margin: 0 20px 0;
+    font-size: 12px;
+  }
+
+  .project_page_project_header {
+    height: 18em;  
+  }
+
+  .project_page_description_img {
+    max-width: 18em;
+    transform: translateY(-5em);
+    position: absolute;
+  }
+
+  /*********
+  PROJECTS
+  *********/
+
+  .project_page_header {
+    margin-left: 1em;
+    margin-top: 0;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: flex-start;
+  }
+
+  .project_page_project_img{
+    padding: 30px;
+    margin: 10px;
+    max-width: 25em;
+    align-self: center;
+  }
+
+  .project_page_description_img_thefork {
+    padding: 30px;
+    margin: 10px;
+    max-height: 24em;
+    align-self: center;
+  }
+
+
 }
