--- a/CSS/style_index.css
+++ b/CSS/style_index.css
@@ -296,7 +296,7 @@ footer {
   margin: 0;
 
   display: flex;
-  justify-content: center
+  justify-content: center;
 }
 
 .contact {
@@ -308,7 +308,9 @@ footer {
 }
 
 .link_footer {
-  color: black;
+  border: white solid 3px;
+  border-radius: 50px;
+  padding: 10px;
 }
 
 .contact_img {
@@ -378,7 +380,7 @@ footer {
   }
 
   h1 {
-    transform: scale(.8)
+    transform: scale(.8);
   }
 }
 
@@ -390,11 +392,11 @@ footer {
   }
 
   .img_videomaking {
-    transform: scale(.4)
+    transform: scale(.4);
   }
 
   h1 {
-    transform: scale(.7)
+    transform: scale(.7);
   }
 
   .info {
@@ -418,7 +420,7 @@ footer {
   }
 
   .img_svolta {
-    transform: scale(.4)
+    transform: scale(.4);
   }
 } 
 
@@ -446,15 +448,15 @@ MOBILE
   }
 
   .img_the_fork {
-    transform: scale(.7)
+    transform: scale(.7);
   }
 
   .img_svolta {
-    transform: scale(.4)
+    transform: scale(.4);
   }
 
   .img_videomaking {
-    transform: scale(.3)
+    transform: scale(.3);
   }
 
   .work_title {
@@ -493,21 +495,13 @@ MOBILE
     justify-content: center;
     padding: 0;
   }
+}
 
+/**********
+ABOUT ME MOBILE
+**********/
 
-  /**********
-  ABOUT ME MOBILE
-  **********/
-  @media (max-width: 450px) {
-    .footer_part {
-    display: flex;
-    flex-flow: column;
-    flex-wrap: nowrap;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-  }
-
+@media (max-width: 450px) {
   .footer_img {
     border-radius: 10px;
     width: 316px;
@@ -523,7 +517,6 @@ MOBILE
     display: flex;
     flex-flow: column;
     flex-wrap: nowrap;
-    flex-wrap: nowrap;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
@@ -536,10 +529,5 @@ MOBILE
     margin: 0;
     text-align: center;
   }
-  
-  
+}  
 
-
-
-
-}
