--- a/CSS/style_index.css
+++ b/CSS/style_index.css
@@ -22,6 +22,11 @@ header {
 
   display: flex;
   justify-content: center;
+
+  /*****
+  js
+  *****/
+  transform: translateY(-30px);
 }
 
 a {
@@ -37,7 +42,8 @@ a {
   /***
   java-script
   ***/
-  opacity: 1;
+  opacity: 0;
+  transform: translateY(150px);
 }
 
 h1 {
@@ -51,17 +57,6 @@ h1 {
 /********
 Intro Page 
 ********/
-
-.intro {
-  margin: 0;
-
-  height: 100vh;
-
-  font-size: 20px;
-
-  background-color: rgb(240, 240, 50);
-  color: white;
-}
 
 .intro_text {
   margin: 0;
