--- a/CSS/style_index.css
+++ b/CSS/style_index.css
@@ -12,8 +12,16 @@ body {
 Splash Page 
 ********/
 
-header {
-  background-color: blue;
+header {  
+  background: rgba(0,95,184,1);
+  background: -moz-linear-gradient(top, rgba(0,95,184,1) 0%, rgba(0,95,184,1) 18%, rgba(77,169,250,1) 100%);
+  background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(0,95,184,1)), color-stop(18%, rgba(0,95,184,1)), color-stop(100%, rgba(77,169,250,1)));
+  background: -webkit-linear-gradient(top, rgba(0,95,184,1) 0%, rgba(0,95,184,1) 18%, rgba(77,169,250,1) 100%);
+  background: -o-linear-gradient(top, rgba(0,95,184,1) 0%, rgba(0,95,184,1) 18%, rgba(77,169,250,1) 100%);
+  background: -ms-linear-gradient(top, rgba(0,95,184,1) 0%, rgba(0,95,184,1) 18%, rgba(77,169,250,1) 100%);
+  background: linear-gradient(to bottom, rgba(0,95,184,1) 0%, rgba(0,95,184,1) 18%, rgba(77,169,250,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#005fb8', endColorstr='#4da9fa', GradientType=0 );
+
   height: 100vh;
 }
 
@@ -40,7 +48,7 @@ a {
   justify-content: center;
   
   /***
-  java-script
+  js
   ***/
   opacity: 0;
   transform: translateY(50px);
@@ -51,46 +59,53 @@ h1 {
   text-align: center;
   font-size: 150px;
 
-  color: yellow;
+  color: rgb(233, 233, 0);
 }
 
 /********
 Intro Page 
 ********/
 
-.intro_text {
-  margin: 0;
-  padding: 20px;
-
-  height: 100vh;
+.intro {
+  height: 130vh;
 
   display: flex;
   justify-content: center;
   align-items: center;
+  
+  background: rgba(255,142,122,1);
+  background: -moz-linear-gradient(45deg, rgba(255,142,122,1) 0%, rgba(255,142,122,1) 1%, rgba(240,240,50,1) 100%);
+  background: -webkit-gradient(left bottom, right top, color-stop(0%, rgba(255,142,122,1)), color-stop(1%, rgba(255,142,122,1)), color-stop(100%, rgba(240,240,50,1)));
+  background: -webkit-linear-gradient(45deg, rgba(255,142,122,1) 0%, rgba(255,142,122,1) 1%, rgba(240,240,50,1) 100%);
+  background: -o-linear-gradient(45deg, rgba(255,142,122,1) 0%, rgba(255,142,122,1) 1%, rgba(240,240,50,1) 100%);
+  background: -ms-linear-gradient(45deg, rgba(255,142,122,1) 0%, rgba(255,142,122,1) 1%, rgba(240,240,50,1) 100%);
+  background: linear-gradient(45deg, rgba(255,142,122,1) 0%, rgba(255,142,122,1) 1%, rgba(240,240,50,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff8e7a', endColorstr='#f0f032', GradientType=1 );
+
+}
+
+.intro_text {
+  margin: 0;
+  padding: 20px;
 
   font-size: 50px;
+  color: white;
 
   text-align: center;
 
-  background-color: rgb(240, 240, 50);
-  color: white;
+  /******
+  js
+  ******/
+  transform: translateY(10em);
+
+  
 }
 
 /********
 Work Page 
 ********/
-
-.work_title {
-  margin: 0;
-
-  height: 100vh;
-
-  font-size: 10em;
-  font-weight: 400;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.work_section {
+  height: 120vh;
 
   background-color: rgb(240, 240, 50);
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffe032+0,ffe032+49,fccc2f+49,fccc2f+100 */
@@ -99,6 +114,18 @@ Work Page
   background: -webkit-linear-gradient(45deg, #ffe032 0%,#ffe032 49%,#fccc2f 49%,#fccc2f 100%); /*Chrome10-25,Safari5.1-6*/
   background: linear-gradient(45deg, #ffe032 0%,#ffe032 49%,#fccc2f 49%,#fccc2f 100%);/* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+*/
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffe032', endColorstr='#fccc2f',GradientType=1 ); /*IE6-9 fallback on horizontal gradient*/
+}
+
+.work_title {
+  margin: 0;
+
+  font-size: 10em;
+  font-weight: 400;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   color: white;
 }
 
@@ -177,7 +204,7 @@ Project General
   text-decoration: none;
   color: black;
   font-size: 13px;
-  font-weight: 500;
+  font-weight: 600;
 
   border-radius: 20px;
 
@@ -239,7 +266,14 @@ footer {
 
   height: 150px;
 
-  background-color: rgb(228, 217, 64);
+  background: rgba(252,150,136,1);
+  background: -moz-linear-gradient(top, rgba(252,150,136,1) 0%, rgba(254,115,108,1) 72%, rgba(254,115,108,1) 95%, rgba(254,115,108,1) 100%);
+  background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(252,150,136,1)), color-stop(72%, rgba(254,115,108,1)), color-stop(95%, rgba(254,115,108,1)), color-stop(100%, rgba(254,115,108,1)));
+  background: -webkit-linear-gradient(top, rgba(252,150,136,1) 0%, rgba(254,115,108,1) 72%, rgba(254,115,108,1) 95%, rgba(254,115,108,1) 100%);
+  background: -o-linear-gradient(top, rgba(252,150,136,1) 0%, rgba(254,115,108,1) 72%, rgba(254,115,108,1) 95%, rgba(254,115,108,1) 100%);
+  background: -ms-linear-gradient(top, rgba(252,150,136,1) 0%, rgba(254,115,108,1) 72%, rgba(254,115,108,1) 95%, rgba(254,115,108,1) 100%);
+  background: linear-gradient(to bottom, rgba(252,150,136,1) 0%, rgba(254,115,108,1) 72%, rgba(254,115,108,1) 95%, rgba(254,115,108,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fc9688', endColorstr='#fe736c', GradientType=0 );
 }
 
 .footer_part {
@@ -375,9 +409,24 @@ footer {
   h1 {
     transform: scale(.8);
   }
+
+  .info {
+    margin-right: 30px;
+  }
+}
+
+@media (max-width:900px) {
+  .info {
+    margin-top: 3em;
+    margin-right: 10px;
+  }
 }
 
 @media (max-width: 750px)  {
+
+  .work_title {
+    font-size: 7em;
+  }
 
   .project_img {
     transform: scale(.6);
@@ -402,7 +451,7 @@ footer {
   }
 
   .info_spec{
-    margin-top: 15px;
+    margin-top: 0
   }
 
   .project {
@@ -423,7 +472,11 @@ MOBILE
 *****/
 
 @media (max-width: 450px)  {
-  
+
+  .my_name {
+
+  }
+
   .intro_text {
     padding: 25px;
 
@@ -433,7 +486,6 @@ MOBILE
   h1 {
     transform: scale(.5);
     position: absolute;
-    top: 70px;
   }
 
   .project_img {
