--- a/CSS/style_index.css
+++ b/CSS/style_index.css
@@ -12,15 +12,15 @@ body {
 Splash Page 
 ********/
 
-header {  
-  background: rgba(0,95,184,1);
-  background: -moz-linear-gradient(top, rgba(0,95,184,1) 0%, rgba(0,95,184,1) 18%, rgba(77,169,250,1) 100%);
-  background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(0,95,184,1)), color-stop(18%, rgba(0,95,184,1)), color-stop(100%, rgba(77,169,250,1)));
-  background: -webkit-linear-gradient(top, rgba(0,95,184,1) 0%, rgba(0,95,184,1) 18%, rgba(77,169,250,1) 100%);
-  background: -o-linear-gradient(top, rgba(0,95,184,1) 0%, rgba(0,95,184,1) 18%, rgba(77,169,250,1) 100%);
-  background: -ms-linear-gradient(top, rgba(0,95,184,1) 0%, rgba(0,95,184,1) 18%, rgba(77,169,250,1) 100%);
-  background: linear-gradient(to bottom, rgba(0,95,184,1) 0%, rgba(0,95,184,1) 18%, rgba(77,169,250,1) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#005fb8', endColorstr='#4da9fa', GradientType=0 );
+header {    
+  background: rgba(33,180,226,1);
+  background: -moz-linear-gradient(-45deg, rgba(33,180,226,1) 0%, rgba(159,245,199,1) 97%, rgba(159,245,199,1) 100%);
+  background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(33,180,226,1)), color-stop(97%, rgba(159,245,199,1)), color-stop(100%, rgba(159,245,199,1)));
+  background: -webkit-linear-gradient(-45deg, rgba(33,180,226,1) 0%, rgba(159,245,199,1) 97%, rgba(159,245,199,1) 100%);
+  background: -o-linear-gradient(-45deg, rgba(33,180,226,1) 0%, rgba(159,245,199,1) 97%, rgba(159,245,199,1) 100%);
+  background: -ms-linear-gradient(-45deg, rgba(33,180,226,1) 0%, rgba(159,245,199,1) 97%, rgba(159,245,199,1) 100%);
+  background: linear-gradient(135deg, rgba(33,180,226,1) 0%, rgba(159,245,199,1) 97%, rgba(159,245,199,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#21b4e2', endColorstr='#9ff5c7', GradientType=1 );
 
   height: 100vh;
 }
@@ -59,7 +59,7 @@ h1 {
   text-align: center;
   font-size: 150px;
 
-  color: rgb(233, 233, 0);
+  color: rgb(255, 255, 1);
 }
 
 /********
@@ -97,6 +97,7 @@ Intro Page
   js
   ******/
   transform: translateY(10em);
+  opacity: 0;
 
   
 }
@@ -104,7 +105,7 @@ Intro Page
 /********
 Work Page 
 ********/
-.work_section {
+.work {
   height: 120vh;
 
   background-color: rgb(240, 240, 50);
@@ -117,14 +118,16 @@ Work Page
 }
 
 .work_title {
-  margin: 0;
+  margin-top: 0;
 
   font-size: 10em;
   font-weight: 400;
 
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-self: center;
+
+  opacity: 0;
 
   color: white;
 }
@@ -140,6 +143,13 @@ Project General
   flex-wrap: wrap;
   
   margin-bottom: 15em;
+
+  /*****
+  JS
+  *****/
+  transform: translateY(80px);
+  opacity: 0;
+
 }
 
 .info {
@@ -161,7 +171,7 @@ Project General
 }
 
 .info_spec_title {
-  margin: 0;
+  margin: 30px 0;
   
   font-size: 2em;
 }
@@ -169,7 +179,7 @@ Project General
 .info_img {
   display: flex;
   justify-content: center;
-  background-color: #fe9689;
+  background-color: #f8ce81;
 }
 
 .info_img_thefork {
@@ -177,6 +187,13 @@ Project General
   justify-content: center;
   background-color: #9fd4e4;
 }
+
+.info_img_pingo {
+  display: flex;
+  justify-content: center;
+  background-color: #fe8278;
+}
+
 
 .info_img_svolta {
   display: flex;
@@ -187,7 +204,7 @@ Project General
 .info_img_videomaking {
   display: flex;
   justify-content: center;
-  background-color: #5617ae;
+  background-color: #fdff6d;
 }
 
 .link_to_product { 
@@ -200,11 +217,10 @@ Project General
 
   overflow: hidden;
 
-  text-transform: uppercase;
   text-decoration: none;
   color: black;
-  font-size: 13px;
-  font-weight: 600;
+  font-size: 15px;
+  font-weight: 500;
 
   border-radius: 20px;
 
@@ -222,7 +238,7 @@ Project General
   top: 100%;
   left: 0;
 
-  background-color: #fe9689;
+  background-color: #f8ce81;
   
 
   transition: all .2s ease-out;
@@ -234,6 +250,10 @@ Project General
 
 .link_to_product_thefork:after {
   background-color: #9fd4e4;
+}
+
+.link_to_product_pingo:after {
+  background-color: #fe8278;
 }
 
 .link_to_product_svolta:after {
@@ -266,14 +286,16 @@ footer {
 
   height: 150px;
 
-  background: rgba(252,150,136,1);
-  background: -moz-linear-gradient(top, rgba(252,150,136,1) 0%, rgba(254,115,108,1) 72%, rgba(254,115,108,1) 95%, rgba(254,115,108,1) 100%);
-  background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(252,150,136,1)), color-stop(72%, rgba(254,115,108,1)), color-stop(95%, rgba(254,115,108,1)), color-stop(100%, rgba(254,115,108,1)));
-  background: -webkit-linear-gradient(top, rgba(252,150,136,1) 0%, rgba(254,115,108,1) 72%, rgba(254,115,108,1) 95%, rgba(254,115,108,1) 100%);
-  background: -o-linear-gradient(top, rgba(252,150,136,1) 0%, rgba(254,115,108,1) 72%, rgba(254,115,108,1) 95%, rgba(254,115,108,1) 100%);
-  background: -ms-linear-gradient(top, rgba(252,150,136,1) 0%, rgba(254,115,108,1) 72%, rgba(254,115,108,1) 95%, rgba(254,115,108,1) 100%);
-  background: linear-gradient(to bottom, rgba(252,150,136,1) 0%, rgba(254,115,108,1) 72%, rgba(254,115,108,1) 95%, rgba(254,115,108,1) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fc9688', endColorstr='#fe736c', GradientType=0 );
+
+
+  background: rgba(33,180,226,1);
+  background: -moz-linear-gradient(-45deg, rgba(33,180,226,1) 0%, rgba(159,245,199,1) 91%, rgba(159,245,199,1) 100%);
+  background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(33,180,226,1)), color-stop(91%, rgba(159,245,199,1)), color-stop(100%, rgba(159,245,199,1)));
+  background: -webkit-linear-gradient(-45deg, rgba(33,180,226,1) 0%, rgba(159,245,199,1) 91%, rgba(159,245,199,1) 100%);
+  background: -o-linear-gradient(-45deg, rgba(33,180,226,1) 0%, rgba(159,245,199,1) 91%, rgba(159,245,199,1) 100%);
+  background: -ms-linear-gradient(-45deg, rgba(33,180,226,1) 0%, rgba(159,245,199,1) 91%, rgba(159,245,199,1) 100%);
+  background: linear-gradient(135deg, rgba(33,180,226,1) 0%, rgba(159,245,199,1) 91%, rgba(159,245,199,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#21b4e2', endColorstr='#9ff5c7', GradientType=1 );  
 }
 
 .footer_part {
@@ -406,6 +428,14 @@ footer {
     
   }
 
+  .img_videomaking {
+    height: 450px;
+  }
+
+  .img_pingo {
+    height: 450px;
+  }
+
   h1 {
     transform: scale(.8);
   }
@@ -429,12 +459,16 @@ footer {
   }
 
   .project_img {
-    transform: scale(.6);
+    height: 400px;
     
   }
 
   .img_videomaking {
-    transform: scale(.4);
+    height: 300px;
+  }
+
+  .img_pingo {
+    height: 300px;
   }
 
   h1 {
@@ -487,21 +521,17 @@ MOBILE
     transform: scale(.5);
     position: absolute;
   }
-
+  
   .project_img {
-    transform: scale(.4);
-  }
-
-  .img_the_fork {
-    transform: scale(.7);
-  }
-
-  .img_svolta {
-    transform: scale(.4);
+    height: 400px;
   }
 
   .img_videomaking {
-    transform: scale(.3);
+    height: 250px;
+  }
+
+  .img_pingo {
+    height: 250px;
   }
 
   .work_title {
