--- a/CSS/style_index.css
+++ b/CSS/style_index.css
@@ -559,7 +559,8 @@ MOBILE
   }
 
   .link_to_product {
-    margin-top: 35px;
+    margin-top: 5px;
+    margin-bottom: 30px;
     
     align-self: center;
 
