--- a/CSS/style_index.css
+++ b/CSS/style_index.css
@@ -31,6 +31,9 @@ header {
   display: flex;
   justify-content: center;
 
+  font-weight: 600;
+  font-size: 18px;
+
   /*****
   js
   *****/
@@ -61,7 +64,7 @@ h1 {
   font-size: 150px;
   
 
-  color: rgb(255, 255, 1);
+  color: white;
 }
 
 /********
@@ -120,14 +123,17 @@ Work Page
 }
 
 .work_title {
-  margin-top: 0;
+  margin:0;
+  padding: 40px;
 
-  font-size: 10em;
+  font-size: 3em;
   font-weight: 400;
 
   display: flex;
   justify-content: center;
   align-self: center;
+
+  text-align: center;
 
   opacity: 0;
 
@@ -348,7 +354,8 @@ footer {
 }
 
 .footer_title {
-  font-size: 50px;
+  font-size: 65px;
+  text-align: center;
 
   margin: 0;
 }
@@ -356,8 +363,11 @@ footer {
 .footer_index {
   display: flex;
   justify-content: center;
+  align-items: center;
+  flex-flow: column;
   color: white;
-  padding: 10px;
+  padding: 0;
+  margin: 0
 }
 
 .footer_description {
@@ -368,6 +378,13 @@ footer {
 
 .footer_text {
   max-width: 500px;
+  font-weight: 600;
+  font-size: 14px;
+}
+
+.email_footer {
+  margin: 0;
+  padding: 0;
 }
 
 .footer_img {  
@@ -386,6 +403,7 @@ footer {
 
 .contact_list {
   margin: 0;
+  padding: 0;
 
   display: flex;
   justify-content: center;
@@ -417,7 +435,7 @@ footer {
   text-decoration: none;
   color: black;
   font-size: 13px;
-  font-weight: 500;
+  font-weight: 600;
   margin: 50px;
 
   border-radius: 20px;
@@ -533,7 +551,7 @@ Responsivnes
 @media (max-width: 750px)  {
 
   .work_title {
-    font-size: 7em;
+    font-size: 3em;
   }
 
   .project_img {
@@ -616,7 +634,7 @@ MOBILE
   }
 
   .work_title {
-    font-size: 100px;
+    font-size: 2em;
   }
 
   .project {
@@ -689,7 +707,7 @@ MOBILE
   }
 
   .work_title {
-    font-size: 100px;
+    font-size: 2em;
   }
 }
 
@@ -712,7 +730,7 @@ ABOUT ME MOBILE
 
   .footer_text {
     max-width: 500px;
-    font-size: 13px;
+    font-size: 14px;
   }
 
   .footer_part {
